classDiagram
    direction LR

    %% ======================= 核心 FSM 模組（既有，完全不修改） =======================
    class FiniteStateMachine {
        -currentState: State
        -transitions: Transition[*]
        +addTransition(transition: Transition) None
        +fire(event: Event) bool
    }

    class Event {
        +name: String
    }

    class Trigger {
        +isTriggeredBy(event: Event) bool
    }

    class Guard {
        +isSatisfied(event: Event) bool
    }

    class Action {
        +execute(event: Event) None
    }

    class State {
        <<interface>>
        +enter: Action
        +exit: Action
        +onEnter(event: Event) None
        +onExit(event: Event) None
    }

    class Transition {
        +from: State
        +trigger: Trigger
        +guard: Guard
        +action: Action
        +to: State
        +isApplicable(currentState: State, event: Event) bool
    }

    FiniteStateMachine "1" --> "1" State : currentState
    FiniteStateMachine "1" o-- "0..*" Transition : transitions
    Transition "1" --> "1" State : from
    Transition "1" --> "1" State : to
    Transition "1" --> "1" Trigger : trigger
    Transition "1" --> "0..1" Guard : guard
    Transition "1" --> "0..1" Action : action

    %% ======================= 子狀態機插件（教科書 Composite 版，獨立套件） =======================
    class CompositeState {
        -innerFsm: FiniteStateMachine
        -enter: Action
        -exit: Action
        +onEnter(event: Event) None
        +onExit(event: Event) None
        +fire(event: Event) bool
    }

    State <|.. CompositeState : Composite 實作 Component 介面（外層眼中只是普通 State）
    CompositeState "1" --> "1" FiniteStateMachine : innerFsm（組合，可再套一層 CompositeState 達成任意深度）

    note for State "Component 介面新增一個操作 fire(event): bool（唯一的新增，非修改既有方法行為）<br/>Leaf（一般具體狀態）：預設回傳 false，代表自己沒有子狀態機可處理<br/>Composite（CompositeState）：覆寫成委派給 innerFsm.fire(event)"

    note for CompositeState "onEnter(event): 先執行自身 enter，再呼叫 innerFsm 初始 State 的 onEnter<br/>onExit(event): 先呼叫 innerFsm 當前 State 的 onExit，再執行自身 exit<br/>fire(event): return innerFsm.fire(event)"

    note for FiniteStateMachine "fire(event) 內部先呼叫 currentState.fire(event)，這是一次多型呼叫；若回傳 false 才繼續比對自己的 Transition[]。不需要 instanceof，也不需要額外的 Driver 類別"
